worked on cleaning up the portfolio item detail view to be more aligned and sized correctly

--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -112,10 +112,10 @@ div.projectBox:hover .projectBody p{
 
 .item-detail {
     background-color: aqua;
-    width: 100%;
+    width: calc(100%-50);
     height: 600px;
     display: block;
-    margin: 0px;
+    margin: 0px 25px 0px 25px;
 }
 .item-detail .header {
     position: relative;
@@ -129,6 +129,9 @@ div.projectBox:hover .projectBody p{
     position: absolute;
     top: 10px;
     right: 30px;
+    font-weight: 300;
+    font-size: 20px;
+    color: #FFFFFF;
 }
 
 .item-detail .title-button-wrapper{
@@ -137,6 +140,17 @@ div.projectBox:hover .projectBody p{
 
 .item-detail .header .title{
     position: relative;
+}
+
+.item-detail .header .title p{
+    margin: 0px 0px 37px 0px;
+    color: #4A4A4A;
+}
+.item-detail .header .title h1{
+    margin: 25px 0px 2px 0px;
+    font-weight: 500;
+    font-size: 42px;
+    color: #FFFFFF;
 }
 
 .item-detail .header .icon{
@@ -167,6 +181,7 @@ div.projectBox:hover .projectBody p{
     font-size: 23px;
     border: none;
     cursor: pointer;
+
 }
 
 .item-detail .get-dropdown .details{
@@ -240,21 +255,32 @@ div.projectBox:hover .projectBody p{
 .item-detail .tech-used .tag-container{
     float: left;
     width: 100%;
+    margin-bottom: 0px;
 }
 .item-detail .tech-used .tag-container p{
     width: 10%;
     float: left;
+    font-weight: 300;
+    color: #4A4A4A;
+    font-size: 20px;
+    margin-bottom: 0px;
+    margin-top: 21px;
 }
 
+
 .item-detail .tech-used .tag-container .tag{
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     float: left;
     text-align: center;
     border-radius: 5px;
-    max-height: 35px;
+    height: 35px;
+    line-height: 35px;
     background-color: #D8D8D8;
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 15.5px;
+    margin-bottom: 0px;
 }
 
 .item-detail .details{
@@ -263,30 +289,79 @@ div.projectBox:hover .projectBody p{
     background-color: azure;
 }
 .item-detail .details .screenshots{
-    width: 66%; 
+    width: calc(65% - 25.5px); 
     height: inherit;
     background-color: firebrick;
     float: left;
 }
+
+.item-detail .details .screenshots .scrollView{
+    margin: 52px 0px 0px 25px;
+    height: 325px;
+    background-color: white;
+    border-color: #979797;
+    border-style: solid;
+    border-width: 1px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.item-detail .details .screenshots .scrollView a{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.item-detail .details .screenshots .scrollView img {
+    border: 0;
+}
+
+.item-detail .details .border{
+    width: 1px;
+    height: calc(520px - 50px);
+    float: left;
+    margin: 50px 25px 0px 25px;
+    background-color: #979797;
+}
+
 .item-detail .details .description{
-    width: 33%;
+    width: calc(35% - 25.5px);
     background-color: peru;
     float: left;
     height: 100%;
-    
+
+}
+.item-detail .details .description h2{
+    font-size: 28px;
+    color: #4A4A4A;
+    font-weight: 500;
+    margin: 18px 0 0 15px;
+}
+
+.item-detail .details .description p{
+    color: #9B9B9B;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0px 30px 0 15px;
 }
 
 .item-detail .support{
-    background-color: dodgerblue;
+/*    background-color: dodgerblue;*/
     text-align: center;
     position: absolute;
     bottom: 25px;
     right: 70px;
     
 }
+.item-detail .support p{
+    margin: 0px 0px 9px 0px;
+    font-size: 20px;
+    font-weight: 500;
+}
 .item-detail .button-container{
     height: 49px;
     align-content: center;
+    margin-top: -8px;
 }
 .item-detail .button-container .support-button{
     width: 95px;
@@ -299,11 +374,20 @@ div.projectBox:hover .projectBody p{
 .item-detail .button-container .support-button#twitter{
     background-color: #30A1ED;
 }
+.item-detail .button-container .support-button#twitter img{
+    margin: 7px;
+}
 .item-detail .button-container .support-button#facebook{
     background-color: #3F5699;
 }
+.item-detail .button-container .support-button#facebook img{
+    margin: 4px 10px 4px 0px;
+}
 .item-detail .button-container .support-button#github{
     background-color: #3D6BBF;
+}
+.item-detail .button-container .support-button#github img{
+    margin: 4px;
 }
 
 
